# go2_hardware_exp

example/: CMakeLists.txt
example/go2/: go2_trajectory_follow.cpp
example/go2_exp/: CMakeLists.txt  go2_pid.cpp  go2_pid_test.cpp  go2_pure_pursuit_client.cpp  go2_track_traj.cpp  pid_demo
